tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Energium-B0XRo_S1RveAsKZSXms9vg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17633077944293998014,
  "prerequisites": [
    2176,
    17975352945573489293
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Are you tired of making Energium Dust by mixing Ruby and Redstone Dust? This bee offers a way to acquire it directly - how convenient is that? To breed it, you'll need to place some Hot Coolant below the hive while inside a Boneyard found in the Nether.\n\nUnlike its parents, this bee won't burn down your base—but it will set you on fire if you're not wearing your apiarist suit!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Energium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2176,
    17975352945573489293
  ],
  "rewards": [],
  "tasks": []
}
